<resources>
    <string name="app_name">Card</string>
    <string name="mountain_welcome">Welcome to Lonely Mountain app</string>
    <string name="create_account">Create Account</string>

    <!-- input name-->
    <string name="your_name">Whats Your Name?</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>

    <!--email-->
    <string name="and_email">And, your email?</string>
    <string name="email">Email Address</string>

    <!--password-->
    <string name="and_password">Create a password</string>
    <string name="password">Password</string>

    <!--Well done -->
    <string name="and_well_done">Well done! <br/>Sign up complete</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>


</resources>