<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/well_done_background_color">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/back_well_done_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_margin="@dimen/app_margin"
        app:icon="@drawable/ic_arrow_back_ios_white_24dp"
        android:backgroundTint="@color/well_done_background_color"
        android:textStyle="bold"
        android:textSize="@dimen/mountain_welcome_font"
        />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/and_well_done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/back_well_done_button"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="@dimen/well_done_margin_top"
        android:layout_marginLeft="@dimen/app_margin"
        android:textSize="@dimen/mountain_welcome_font"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:text="@string/and_well_done"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/surname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/name"
        android:layout_margin="@dimen/app_margin"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/surname"
            android:backgroundTint="@color/well_done_background_color"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_well_done"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/surname"
        android:layout_margin="@dimen/app_margin"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:backgroundTint="@color/well_done_background_color"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_well_done"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/email_well_done"
        android:layout_margin="@dimen/app_margin"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:backgroundTint="@color/well_done_background_color"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/and_well_done"
        android:layout_margin="@dimen/app_margin"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:backgroundTint="@color/well_done_background_color"
            />

    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>